tests/exceptions/output/diagnose/syntax_error.txt

[33m[1mTraceback (most recent call last):[0m

  File "[32mtests/exceptions/source/diagnose/[0m[32m[1msyntax_error.py[0m", line [33m17[0m, in [35m<module>[0m
    [1mexec[0m[1m([0m[1mcode[0m[1m)[0m
    [36m     └ [0m[36m[1m'\nif True:\n    a = 5\n    b = 7 *\n'[0m

  File "<string>", line 4
    b = 7 *
           ^

[31m[1mSyntaxError[0m:[1m invalid syntax[0m
